--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Goals Stats</title>
-    <meta name="description" content="Analise estatísticas detalhadas" />
+    <meta name="description" content="A plataforma mais avançada para análise estatística de gols" />
     <meta name="author" content="Synergy" />
 
-    <meta property="og:title" content="goal-stats-selector-pro" />
-    <meta property="og:description" content="Synergy" />
+    <meta property="og:title" content="A plataforma mais avançada para análise estatística de gols" />
+    <meta property="og:description" content="Goals Stats" />
     <meta property="og:type" content="website" />  
 
   
