--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     <meta name="description" content="A plataforma mais avançada para análise estatística de gols" />
     <meta name="author" content="Synergy" />
 
-    <meta property="og:title" content="A plataforma mais avançada para análise estatística de gols" />
-    <meta property="og:description" content="Goals Stats" />
-    <meta property="og:type" content="website" />  
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://goalstats.vercel.app/" />
+    <meta property="og:title" content="Goals Stats - Análise Estatística Avançada" />
+    <meta property="og:description" content="A plataforma mais completa para análise de gols e estatísticas esportivas" />
+    <meta property="og:image" content="https://goalstats.vercel.app/images/social-preview.jpg" />
 
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://goalstats.vercel.app/" />
+    <meta property="twitter:title" content="Goals Stats - Análise Estatística Avançada" />
+    <meta property="twitter:description" content="A plataforma mais completa para análise de gols e estatísticas esportivas" />
+    <meta property="twitter:image" content="https://goalstats.vercel.app/images/social-preview.jpg" />
   
   </head>
 
