--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta property="og:url" content="https://goalstats.vercel.app/" />
     <meta property="og:title" content="Goals Stats - Análise Estatística Avançada" />
     <meta property="og:description" content="A plataforma mais completa para análise de gols e estatísticas esportivas" />
-    <meta property="og:image" content="https://goalstats.vercel.app/images/social-preview.jpg" />
+    <meta property="og:image" content="https://goalstats.vercel.app/social-preview.jpeg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://goalstats.vercel.app/" />
     <meta property="twitter:title" content="Goals Stats - Análise Estatística Avançada" />
     <meta property="twitter:description" content="A plataforma mais completa para análise de gols e estatísticas esportivas" />
-    <meta property="twitter:image" content="https://goalstats.vercel.app/images/social-preview.jpg" />
+    <meta property="twitter:image" content="https://goalstats.vercel.app/social-preview.jpeg" />
   
   </head>
 
